--- a/src/main.css
+++ b/src/main.css
@@ -19,68 +19,75 @@ nav {
   color: inherit;
   background: transparent;
 }
+
 body {
   font-family: helvetica neue, helvetica, sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  letter-spacing: 0.025em;
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
   -ms-text-size-adjust: none;
   text-size-adjust: none;
   overflow-x: hidden;
 }
+
 #root {
   min-height: 100vh;
 }
+
 a {
   -ms-touch-action: manipulation;
   touch-action: manipulation;
   color: #d9230f;
 }
+
 li {
   list-style: none;
   padding-left: 18px;
   text-indent: -15px;
   margin: 0.5vh 0;
 }
+
 li:before {
   content: "\2013";
   padding-right: 7px;
-} /*title*/
-h1 {
-  font-size: 1.7em;
-  margin-bottom: 0.5vh;
 }
+
 #root > div > a {
   font-size: 14px;
 }
+
 nav {
   margin: 3vh 0;
 }
+
 p {
   margin: 3vh 0;
   line-height: 1.4;
 }
+
 code {
   font-family: monospace;
   font-size: 15px;
   padding-left: 2px;
 }
+
 #root > div > div > div {
   margin: 1vh 0;
 }
+
 #root > div > div > div > div {
   margin: 3vh 0;
 }
+
 .social-contact {
   max-width: 100px;
   width: 100%;
 }
+
 .social .sub-text-social {
   color: #808080;
   text-align: center;
 }
+
 pre {
   overflow: auto;
   display: block;
@@ -94,4 +101,52 @@ pre {
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+:root {
+  --font-size: 1.5vw;
+  font-size: var(--font-size);
+}
+
+@media screen and (min-width: 980px) /* Desktop */ {
+  :root {
+    --font-size: 1.1vw;
+  }
+}
+
+@media screen and (max-width: 979px) /* Tablet */ {
+  :root {
+    --font-size: 2vw;
+  }
+}
+
+@media screen and (max-width: 500px) /* Mobile */ {
+  :root {
+    --font-size: 4vw;
+  }
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: lighter;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: lighter;
+}
+
+h3 {
+  font-size: 1.75rem;
+  font-weight: lighter;
+}
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: lighter;
+}
+
+h5 {
+  font-size: 1.25rem;
+  font-weight: lighter;
 }
