--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,6 @@
+:root {
+  --main-text-color: #d9230f;
+}
 html,
 body,
 div,
@@ -36,7 +39,7 @@ body {
 a {
   -ms-touch-action: manipulation;
   touch-action: manipulation;
-  color: #d9230f;
+  color: var(--main-text-color);
 }
 
 li {
