--- a/pages/_app.module.css
+++ b/pages/_app.module.css
@@ -3,11 +3,27 @@
   flex-direction: row;
   height: 100%;
   padding: 1rem;
-  max-width: 70vw;
+  max-width: var(--default-width);
+  width: var(--default-width);
 }
 
 .container {
   display: flex;
   position: absolute;
   left: 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  #content {
+    padding: 1rem;
+    max-width: unset;
+    width: unset;
+    display: block;
+  }
+
 }
