--- a/pages/_app.module.css
+++ b/pages/_app.module.css
@@ -13,6 +13,14 @@
   left: 0;
 }
 
+#content-wrapper {
+  flex-direction: row;
+}
+
+.heading {
+  padding: 0 1rem;
+}
+
 @media only screen and (max-width: 600px) {
   .container {
     flex-direction: column;
@@ -26,4 +34,11 @@
     display: block;
   }
 
+  .heading > h1 {
+    font-size: 1.8rem;
+  }
+
+  .heading > h3 {
+    display: none;
+  }
 }
