--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -1,25 +1,25 @@
-@import "new.css";
+@import 'new.css';
 
-@media (prefers-color-scheme:dark) {
-    :root {
-        --nc-tx-1: #ffffff;
-        --nc-tx-2: #eeeeee;
-        --nc-bg-1: #151515;
-        --nc-bg-2: #111111;
-        --nc-bg-3: #222222;
-        --nc-lk-1: rgb(252, 78, 78);
-        --nc-lk-2: rgb(170, 0, 0);
-        --nc-lk-tx: #FFFFFF;
-        --nc-ac-1: #7928CA;
-        --nc-ac-tx: #FFFFFF;
-        --default-width: 70vw;
-    }
+@media (prefers-color-scheme: dark) {
+  :root {
+    --nc-tx-1: #ffffff;
+    --nc-tx-2: #eeeeee;
+    --nc-bg-1: #151515;
+    --nc-bg-2: #111111;
+    --nc-bg-3: #222222;
+    --nc-lk-1: rgb(252, 78, 78);
+    --nc-lk-2: rgb(170, 0, 0);
+    --nc-lk-tx: #ffffff;
+    --nc-ac-1: #7928ca;
+    --nc-ac-tx: #ffffff;
+    --default-width: 70vw;
+  }
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-main>div:first-child {
-    width: var(--default-width);
+main > div:first-child {
+  width: var(--default-width);
 }
