Minor style optimisations

--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -20,6 +20,6 @@ a {
   text-decoration: none;
 }
 
-main > div:first-child {
-  width: var(--default-width);
+main>div:first-child {
+  width: 100%;
 }
