--- a/components/styles/Navigation.module.css
+++ b/components/styles/Navigation.module.css
@@ -22,13 +22,14 @@
   flex-direction: column;
   min-width: 150px;
   height: 100%;
+  position: sticky;
+  /* left: 0; */
+  top: 0;
 }
 
 @media only screen and (max-width: 600px) {
   #nav-bar {
     flex-direction: row;
-    position: sticky;
-    top: 0;
     background-color: var(--nc-bg-1);
   }
 
