--- a/components/styles/Navigation.module.css
+++ b/components/styles/Navigation.module.css
@@ -23,14 +23,26 @@
   min-width: 150px;
   height: 100%;
   position: sticky;
-  /* left: 0; */
-  top: 0;
+  left: 0;
+  padding-top: 1rem;
+  top: 0rem;
+}
+
+#name {
+  font-size: 1.8rem;
+  margin: auto;
 }
 
 @media only screen and (max-width: 600px) {
   #nav-bar {
-    flex-direction: row;
+    flex-direction: column;
     background-color: var(--nc-bg-1);
+  }
+
+  #nav-links {
+    padding-top: 1rem;
+    display: flex;
+    padding-bottom: 1rem;
   }
 
   .nav-link {
@@ -41,6 +53,7 @@
     margin: auto;
     height: 50px;
     width: 50px;
-    padding-left: 0.5rem;
+    margin-left: 1rem;
+    position: absolute;
   }
 }
