--- a/pages/_app.module.css
+++ b/pages/_app.module.css
@@ -11,15 +11,14 @@
   display: flex;
   position: absolute;
   left: 0;
+  top: 0;
+
 }
 
 #content-wrapper {
   flex-direction: row;
 }
 
-.heading {
-  padding: 0 1rem;
-}
 
 @media only screen and (max-width: 600px) {
   .container {
@@ -32,13 +31,5 @@
     max-width: unset;
     width: unset;
     display: block;
-  }
-
-  .heading > h1 {
-    font-size: 1.8rem;
-  }
-
-  .heading > h3 {
-    display: none;
   }
 }
