--- a/pages/css/new.css
+++ b/pages/css/new.css
@@ -5,11 +5,13 @@
  * Do NOT use SRI with dynamically generated files! More information: https://www.jsdelivr.com/using-sri-with-dynamic-files
  */
 :root {
-  --nc-font-sans: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --nc-font-mono: Consolas, monaco, 'Ubuntu Mono', 'Liberation Mono',
-    'Courier New', Courier, monospace;
+  --nc-font-sans:
+    'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --nc-font-mono:
+    Consolas, monaco, 'Ubuntu Mono', 'Liberation Mono', 'Courier New', Courier,
+    monospace;
   --nc-tx-1: #000000;
   --nc-tx-2: #1a1a1a;
   --nc-bg-1: #ffffff;
