--- a/pages/_app.module.css
+++ b/pages/_app.module.css
@@ -13,6 +13,22 @@
   max-width: 100%;
 }
 
+/* Skip link for accessibility */
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: #000;
+  color: #fff;
+  padding: 8px;
+  text-decoration: none;
+  z-index: 100;
+}
+
+.skip-link:focus {
+  top: 0;
+}
+
 #content-wrapper {
   flex-direction: row;
   width: 70%;
